--- a/plugins/mongo_db_plugin/CMakeLists.txt
+++ b/plugins/mongo_db_plugin/CMakeLists.txt
@@ -1,7 +1,7 @@
 if(BUILD_MONGO_DB_PLUGIN)
   file(GLOB HEADERS "include/eosio/mongo_db_plugin/*.hpp")
   add_library( mongo_db_plugin
-               mongo_db_plugin.cpp
+               mongo_db_plugin.cpp ram_market.cpp
                ${HEADERS} )
 
   find_package(libmongoc-1.0 1.8)
